<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>software.xdev</groupId>
	<artifactId>expiring-limited-cache</artifactId>
	<version>2.1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>expiring-limited-cache</name>
	<description>expiring-limited-cache</description>
	<url>https://github.com/xdev-software/expiring-limited-cache</url>

	<scm>
		<url>https://github.com/xdev-software/expiring-limited-cache</url>
		<connection>scm:git:https://github.com/xdev-software/expiring-limited-cache.git</connection>
	</scm>

	<inceptionYear>2024</inceptionYear>

	<organization>
		<name>XDEV Software</name>
		<url>https://xdev.software</url>
	</organization>

	<developers>
		<developer>
			<name>XDEV Software</name>
			<organization>XDEV Software</organization>
			<url>https://xdev.software</url>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<javaVersion>17</javaVersion>
		<maven.compiler.release>${javaVersion}</maven.compiler.release>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.17</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M16</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.9.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>5.0.0</version>
				<configuration>
					<properties>
						<email>${project.organization.url}</email>
					</properties>
					<licenseSets>
						<licenseSet>
							<header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
							<includes>
								<include>src/main/java/**</include>
								<include>src/test/java/**</include>
							</includes>
						</licenseSet>
					</licenseSets>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>format</goal>
						</goals>
						<phase>process-sources</phase>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<executions>
					<execution>
						<id>compile-java-17</id>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>compile-java-21</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<release>21</release>
							<compileSourceRoots>
								<compileSourceRoot>${project.basedir}/src/main/java21</compileSourceRoot>
							</compileSourceRoots>
							<multiReleaseOutput>true</multiReleaseOutput>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<release>${maven.compiler.release}</release>
					<compilerArgs>
						<arg>-proc:none</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<quiet>true</quiet>
					<doclint>none</doclint>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>publish</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>flatten-maven-plugin</artifactId>
						<version>1.7.2</version>
						<configuration>
							<flattenMode>ossrh</flattenMode>
						</configuration>
						<executions>
							<execution>
								<id>flatten</id>
								<phase>process-resources</phase>
								<goals>
									<goal>flatten</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<!-- Fixes "gpg: signing failed: Inappropriate ioctl for device" -->
									<!-- Prevent `gpg` from using pinentry programs -->
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>publish-sonatype-central-portal</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.8.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>sonatype-central-portal</publishingServerId>
							<autoPublish>true</autoPublish>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>checkstyle</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-checkstyle-plugin</artifactId>
						<version>3.6.0</version>
						<dependencies>
							<dependency>
								<groupId>com.puppycrawl.tools</groupId>
								<artifactId>checkstyle</artifactId>
								<version>11.0.1</version>
							</dependency>
						</dependencies>
						<configuration>
							<configLocation>../.config/checkstyle/checkstyle.xml</configLocation>
							<includeTestSourceDirectory>true</includeTestSourceDirectory>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>pmd</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-pmd-plugin</artifactId>
						<version>3.27.0</version>
						<configuration>
							<analysisCache>true</analysisCache>
							<includeTests>true</includeTests>
							<printFailingErrors>true</printFailingErrors>
							<rulesets>
								<ruleset>../.config/pmd/java/ruleset.xml</ruleset>
							</rulesets>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>net.sourceforge.pmd</groupId>
								<artifactId>pmd-core</artifactId>
								<version>7.17.0</version>
							</dependency>
							<dependency>
								<groupId>net.sourceforge.pmd</groupId>
								<artifactId>pmd-java</artifactId>
								<version>7.17.0</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
			<reporting>
				<plugins>
					<!-- Required for reporting -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jxr-plugin</artifactId>
						<version>3.6.0</version>
					</plugin>
				</plugins>
			</reporting>
		</profile>
	</profiles>
</project>
